# Maratis-Tiny-C-library

./: .gitignore  Acknowledgements.txt  CMakeLists.txt  README.md  build_tests_unix.sh  build_tests_vs.bat
CMake/: OutOfSourceBuild.cmake
include/: m_base.h  m_color.h  m_corner_detection.h  m_dist.h  m_image.h  m_image_filter.h  m_image_resize.h  m_math.h  m_morphology.h  m_path_finding.h  m_raster.h
src/: m_color.c  m_corner_detection.c  m_dist.c  m_half.c  m_image.c  m_image_filter.c  m_image_resize.c  m_math.c  m_morphology.c  m_raster.c
tests/: test.h
tests/raster/: CMakeLists.txt  main.c
tests/raytracing/: CMakeLists.txt  main.c
tests/vorogen/: CMakeLists.txt  main.c
tests/voronoi/: CMakeLists.txt  main.c
