## Find source and headers
FILE(GLOB HEADERS
  *.h
  ${MTCL_INCLUDE_DIR}/*.h
  ${STB_INCLUDE_DIR}/*.h
)
FILE(GLOB SOURCES
  *.c*
  ${MTCL_SRC_DIR}/*.c
)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ## Maratis
  ${MTCL_INCLUDE_DIR}

  ## 3rdparty
  ${GLFW_INCLUDE_DIR}
  ${TINYCTHREAD_INCLUDE_DIR}
  ${STB_INCLUDE_DIR}
)

ADD_EXECUTABLE(Vorogen ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(Vorogen
  ## Maratis
  ${MTCL_LIBRARIES}

  ## 3rdparty
  ${GLFW_LIBRARIES}
  ${TINYCTHREAD_LIBRARIES}

  ## System libraries
  ${OPENGL_LIBRARIES}
  ${PLATFORM_LIBRARIES}
  ${OS_SPECIFIC_LIBRARIES}
)

## Install
INSTALL(TARGETS Vorogen DESTINATION ${MTCL_INSTALL_DIR})
INSTALL(DIRECTORY ../dataset DESTINATION ${MTCL_INSTALL_DIR})

IF(APPLE)
  SET_TARGET_PROPERTIES(
    Vorogen
    PROPERTIES
    BUILD_WITH_INSTALL_RPATH 1
    INSTALL_RPATH "@loader_path/"
  )
ENDIF(APPLE)

IF(UNIX AND NOT APPLE)
  SET_TARGET_PROPERTIES(
    Vorogen
    PROPERTIES
    BUILD_WITH_INSTALL_RPATH 1
    INSTALL_RPATH "$ORIGIN/"
  )
ENDIF(UNIX AND NOT APPLE)
